--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Wenas mundo xd</h1>
+        <h1>Que chingue a su madre el america xd</h1>
     </body>
 </html>
